--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>TE-causality by olavolav</title>
+    <title>TE-Causality</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
@@ -15,7 +15,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>TE-causality</h1>
+        <h1>TE-Causality</h1>
         <p>Generalized Transfer Entropy for connectivity analysis.</p>
         <p class="view"><a href="https://github.com/olavolav/te-causality">View the Project on GitHub <small>olavolav/te-causality</small></a></p>
         <ul>
@@ -25,11 +25,26 @@
         </ul>
       </header>
       <section>
-        <h1>TE-Causality</h1>
+        <h2>About</h2>
 
-<p>A software package consists of the source code used for the Transfer Entropy (TE) based measure of effective connectivity (called Generalized Transfer Entropy, or GTE) published in <a href="http://arxiv.org/abs/1201.0732">Model-free Reconstruction of Neuronal Network Connectivity from Calcium Imaging Signals (pre-print)</a>.</p>
+<p>Source code for the Transfer Entropy (TE) based measure of effective connectivity (called Generalized Transfer Entropy, or GTE) published in <a href="http://arxiv.org/abs/1201.0732">Model-free Reconstruction of Neuronal Network Connectivity from Calcium Imaging Signals (pre-print)</a>.</p>
 
 <p>Extract effective connectivities based on spike times, have it simulate fluorescence signals for you, or supply your own signal. As TE is model-independent, virtually any kind of signal can be used.</p>
+
+<h3>Features</h3>
+
+<ul>
+  <li>Extract effective connectivities based on real or simulated fluorescence signals.</li>
+  <li>Model-free, so you can supply any other kind of signal.</li>
+  <li>Computationally efficient.</li>
+  <li>Can auto-detect the optimal bin number and/or the optimal conditioning level.</li>
+  <li>Easy parameter control via the <a href="https://github.com/ChristophKirst/SimKernel">SimKernel</a> package.</li>
+  <li>Actively maintained by a growing group of active users.</li>
+</ul>
+
+<h3>What's included?</h3>
+
+<p>Primarily, we provide the GTE analysis in a program called <em>te-extended</em> to efficiently calculate Transfer Entropy for arbitrary Markov Order. Also included is a set of simple examples (we are working to expand this), and the script for the <a href="http://www.nest-initiative.org">NEST simulator</a> that we use to generate spike trains.</p>
 
 <p>Also included are other causality measures for comparison:</p>
 
@@ -49,29 +64,11 @@
 <em>te-binless-Kraskov</em>, based on: A. Kraskov et al., <a href="http://pre.aps.org/abstract/PRE/v69/i6/e066138">Estimating Mutual Information</a>, Physical Review E, 2004</li>
 <li>
 <em>te-binless-Frenzel</em>, based on: S. Frenzel and B. Pompe, <a href="http://prl.aps.org/abstract/PRL/v99/i20/e204101">Partial Mutual Information for Coupling Analysis of Multivariate Time Series</a>, Physical Review Letters, 2007</li>
-</ul><h2>Dependencies</h2>
+</ul>
 
-<h3>GTE</h3>
+<h2>Documentation</h2>
 
-<p>To compile the GTE binaries based on binned estimates, all you need is a standard C++ compiler, and the following libraries:</p>
-
-<ul>
-<li><a href="http://www.gnu.org/s/gsl/">GNU Scientific Library (GSL)</a></li>
-<li><a href="http://www.boost.org/">Boost</a></li>
-<li>and Christoph Kirsts's <a href="https://github.com/ChristophKirst/SimKernel">SimKernel</a> package</li>
-</ul><p>Please make sure that GSL and Boost are available to your C++ linker, and that the path to the SimKernel files is correctly set in the Rakefile.</p>
-
-<h3>Light scattering</h3>
-
-<p>To simulate light scattering, we need to load the spatial positions of each node from a YAML file. You therefore need to have the <a href="http://code.google.com/p/yaml-cpp">yaml-cpp</a> libraries installed.</p>
-
-<h3>Binless methods</h3>
-
-<p>To use the binless estimators, you also need to install Marius Muja's excellent <a href="https://github.com/mariusmuja/flann">FLANN</a> (Fast Library for Approximate Nearest Neighbors) package and make it available to your linker.</p>
-
-<h2>Configuration etc.</h2>
-
-<p>For details, please consult the <a href="https://github.com/olavolav/te-causality">Readme in the source repository</a>.</p>
+<p>For details on installation and configuration, please consult the <a href="https://github.com/olavolav/te-causality">Readme in the source repository</a>.</p>
 
 <h2>Copyright</h2>
 
@@ -80,8 +77,7 @@
 <p>(ADD SOMETHING HERE LATER!)</p>
       </section>
       <footer>
-        <p>This project is maintained by <a href="https://github.com/olavolav">olavolav</a></p>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+        <p>This project is maintained by <a href="https://github.com/olavolav">Olav Stetter</a></p>
       </footer>
     </div>
     <script src="javascripts/scale.fix.js"></script>
