Added Gauges tracking code

--- a/index.html
+++ b/index.html
@@ -82,5 +82,18 @@
     </div>
     <script src="javascripts/scale.fix.js"></script>
     
+    <script type="text/javascript">
+      var _gauges = _gauges || [];
+      (function() {
+        var t   = document.createElement('script');
+        t.type  = 'text/javascript';
+        t.async = true;
+        t.id    = 'gauges-tracker';
+        t.setAttribute('data-site-id', '4fbd072cf5a1f5792b000031');
+        t.src = '//secure.gaug.es/track.js';
+        var s = document.getElementsByTagName('script')[0];
+        s.parentNode.insertBefore(t, s);
+      })();
+    </script>
   </body>
 </html>
