--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
           <li><a href="https://github.com/olavolav/te-causality/tarball/master">Download <strong>TAR Ball</strong></a></li>
           <li><a href="https://github.com/olavolav/te-causality">View On <strong>GitHub</strong></a></li>
         </ul>
+        <div id="preview-warning">
+          <b>Preliminary</b><br/>Please note that as of today, the TE-Causality repository has not yet been made public, and therefore cannot be accessed at this point. Please check back in a few days. Thank you.</div>
       </header>
       <section>
         <h2>About</h2>
