Small text improvements for the list of features

--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
 
 <p>Source code for the Transfer Entropy (TE) based measure of effective connectivity (called Generalized Transfer Entropy, or GTE) published in <a href="http://arxiv.org/abs/1201.0732">Model-free Reconstruction of Neuronal Network Connectivity from Calcium Imaging Signals (pre-print)</a>.</p>
 
-<p>Extract effective connectivities based on spike times, have it simulate fluorescence signals for you, or supply your own signal. As TE is model-independent, virtually any kind of signal can be used.</p>
+<p>Extract effective connectivity based on spike times, have it simulate fluorescence signals for you, or supply your own signal. As TE is model-independent, virtually any kind of signal can be used.</p>
 
 <h3>Features</h3>
 
 <ul>
-  <li>Extract effective connectivities based on real or simulated fluorescence signals.</li>
-  <li>Model-free, so you can supply any other kind of signal.</li>
+  <li>Compute effective connectivity based on Transfer Entropy or other causality measures (see below).</li>
+  <li>Model-free, so you can supply any kind of signal, not just fluorescence.</li>
   <li>Computationally efficient.</li>
   <li>Can auto-detect the optimal bin number and/or the optimal conditioning level.</li>
   <li>Easy parameter control via the <a href="https://github.com/ChristophKirst/SimKernel">SimKernel</a> package.</li>
