Fixed GitHub link

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <header>
         <h1>Model-free measures of causality</h1>
         <p>Generalized Transfer Entropy and other measures for connectivity analysis.</p>
-        <p class="view"><a href="https://github.com/olavolav/te-causality">View the Project on GitHub <small>olavolav/te-causality</small></a></p>
+        <p class="view"><a href="https://github.com/olavolav/te-causality" target="_blank">View the Project on GitHub <small>olavolav/te-causality</small></a></p>
         <ul>
           <li><a href="https://github.com/olavolav/te-causality/zipball/master">Download <strong>ZIP File</strong></a></li>
           <li><a href="https://github.com/olavolav/te-causality/tarball/master">Download <strong>TAR File</strong></a></li>
