Fixed remaining GitHub links

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <ul>
           <li><a href="https://github.com/olavolav/te-causality/zipball/master">Download <strong>ZIP File</strong></a></li>
           <li><a href="https://github.com/olavolav/te-causality/tarball/master">Download <strong>TAR File</strong></a></li>
-          <li><a href="https://github.com/olavolav/te-causality">View On <strong>GitHub</strong></a></li>
+          <li><a href="https://github.com/olavolav/te-causality" target="_blank">View On <strong>GitHub</strong></a></li>
         </ul>
       </header>
       <section>
@@ -37,7 +37,7 @@
           <li>Computationally efficient.</li>
           <li>Can auto-detect the optimal bin number and/or the optimal conditioning level.</li>
           <li>Can simulate fluorescence for you, or you supply your own signal. As it is model-free, any kind of signal can be used.</li>
-          <li>Easy parameter control via the <a href="https://github.com/ChristophKirst/SimKernel">SimKernel</a> package.</li>
+          <li>Easy parameter control via the <a href="https://github.com/ChristophKirst/SimKernel" target="_blank">SimKernel</a> package.</li>
           <li>Actively maintained by a growing group of active users.</li>
         </ul>
 
@@ -61,11 +61,11 @@
 
         <h2>Documentation</h2>
 
-        <p>A guide to installation and configuration is provided in the <a href="https://github.com/olavolav/te-causality">Readme in the source repository</a>. As mentioned above, we are also working on a set of minimal examples to get you started.</p>
+        <p>A guide to installation and configuration is provided in the <a href="https://github.com/olavolav/te-causality" target="_blank">Readme in the source repository</a>. As mentioned above, we are also working on a set of minimal examples to get you started.</p>
 
         <h2>Questions?</h2>
 
-        <p>We will be happy to answer them. Please contact us using the <a href="https://github.com/olavolav/te-causality/issues">Issues tab</a> on GitHub.</p>
+        <p>We will be happy to answer them. Please contact us using the <a href="https://github.com/olavolav/te-causality/issues" target="_blank">Issues tab</a> on GitHub.</p>
 
         <h2>Copyright</h2>
 
@@ -91,7 +91,7 @@
         </p>
       </section>
       <footer>
-        <p>This project is maintained by <a href="https://github.com/olavolav">Olav Stetter</a><br/>
+        <p>This project is maintained by <a href="https://github.com/olavolav" target="_blank">Olav Stetter</a><br/>
           <a href="http://www.ds.mpg.de">Max Planck Institute for Dynamics and Self-Organization</a>
         </p>
       </footer>
