Changed link of paper to PLoS Comput. Biol.

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <section>
         <h2>About</h2>
         
-        <p>Here you can download the source code for the Transfer Entropy (TE) based measure of effective connectivity (called Generalized Transfer Entropy, or GTE) published in <a href="http://arxiv.org/abs/1201.0732">Model-free Reconstruction of Excitatory Neuronal Network Connectivity from Calcium Imaging Signals (pre-print)</a>.</p>
+        <p>Here you can download the source code for the Transfer Entropy based measure of effective connectivity called Generalized Transfer Entropy (GTE) as <a href="http://www.ploscompbiol.org/article/info%3Adoi%2F10.1371%2Fjournal.pcbi.1002653">published in PLoS Computational Biology</a>.</p>
 
         <h3>Features</h3>
 
@@ -43,7 +43,7 @@
 
         <h3>What's included?</h3>
 
-        <p>Primarily, we provide the GTE analysis in a program called <em>te-extended</em> to efficiently calculate Transfer Entropy for arbitrary Markov Order. Also included is a set of simple examples (work in progress), and the script for the <a href="http://www.nest-initiative.org">NEST</a> simulator that we use to generate spike trains.</p>
+        <p>Primarily, we provide the analysis in a program called <em>te-extended</em> to efficiently calculate GTE for arbitrary Markov order. Also included is a set of simple examples (work in progress), and the script for the <a href="http://www.nest-initiative.org">NEST</a> simulator that we use to generate spike trains.</p>
 
         <p>Also included are other causality measures for comparison:</p>
 
